--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-<meta name="google-site-verification" content="2nqi1F8oW9r13A65dEEg7b1ovjAwJsWE4ZHnn8Cw4D0" />
+  <meta name="google-site-verification" content="2nqi1F8oW9r13A65dEEg7b1ovjAwJsWE4ZHnn8Cw4D0" />
 
   <!-- 🌐 Basic Meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mosaic Imports</title>
   <meta name="title" content="Mosaic Imports" />
-  <meta name="description" content="Mosaic Imports is an international architecture and design studio delivering human-centered, purposeful, and timeless spaces. A legacy collaboration between Mosaic Imports Architects and MaxTayefi Architects under Mosaic Holding Corporation." />
-  <meta name="keywords" content="Mosaic Imports, architecture, design studio, Mosaic Imports, Max Tayefi, Mosaic Holding Corporation, international architects, design excellence, sustainable architecture, global projects, civic design, commercial architecture" />
+  <meta name="description"
+    content="Mosaic Imports is the global sourcing and import arm of Mosaic Gold Incorporation, supplying construction, engineering, architectural, and interior materials for projects across international markets. We support the built environment through intelligent sourcing, integrated supply solutions, and reliable global partnerships." />
+  <meta name="keywords"
+    content="Mosaic Imports, Mosaic Gold Incorporation, global sourcing, construction materials import, engineering materials supply, architectural materials sourcing, building materials procurement, integrated sourcing solutions, international import services, construction supply chain, architectural finishes import, MEP materials sourcing, global material suppliers, built environment sourcing" />
   <meta name="author" content="Mosaic Imports" />
 
   <!-- 🖼️ Favicon -->
@@ -24,7 +27,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://mosaic-imports.com/" />
   <meta property="og:title" content="Mosaic Imports" />
-  <meta property="og:description" content="An architecture and design studio crafting purposeful, human-centered, and timeless spaces across the globe." />
+  <meta property="og:description"
+    content="An architecture and design studio crafting purposeful, human-centered, and timeless spaces across the globe." />
   <meta property="og:image" content="https://mosaic-imports.com/favicon.jpg" />
 
   <!--  Twitter -->
@@ -55,6 +59,7 @@
 <body>
   <div id="root"></div>
 </body>
+
 </html>
 
 
