--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="google-site-verification" content="2nqi1F8oW9r13A65dEEg7b1ovjAwJsWE4ZHnn8Cw4D0" />
-
+  <meta name="google-site-verification" content="google0d2e3b837730105d" />
   <!-- 🌐 Basic Meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mosaic Imports</title>
