--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="google-site-verification" content="google0d2e3b837730105d" />
+  <meta name="google-site-verification" content="wrogrI2NWlfkZDY2yR2FNiKcxuXXmefe_l2fLH4QK7k" />
   <!-- 🌐 Basic Meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mosaic Imports</title>
